data/derived/sp14/progs/unify/prog4358.ml.out
Characters 192-193:
  ((eval (e2,x,y))+.(eval (e3,x,y)))/.2
                                      ^
Error: This expression has type int but an expression was expected of type
         float
